--- a/client/src/app/components/genes/genes-table/genes-table.component.html
+++ b/client/src/app/components/genes/genes-table/genes-table.component.html
@@ -122,8 +122,8 @@
           <cvc-gene-tag [gene]="gene"></cvc-gene-tag>
         </td>
         <td>
-          <span *ngFor="let alias of gene.aliases; last as isLast">
-            {{ alias.name }}{{ isLast ? '' : ', ' }}
+          <span *ngFor="let alias of gene.geneAliases; last as isLast">
+            {{ alias }}{{ isLast ? '' : ', ' }}
           </span>
         </td>
         <td>
