--- a/client/src/app/components/drugs/cvc-drug-popover/cvc-drug-popover.component.html
+++ b/client/src/app/components/drugs/cvc-drug-popover/cvc-drug-popover.component.html
@@ -8,15 +8,20 @@
         {{ d.name }}
       </ng-template>
       <ng-template #linkout>
-        <cvc-link-tag [href]="d.drugUrl" tooltip="View on NCI Thesaurus">
+        <cvc-link-tag *ngIf="d.ncitId; else noNcitId" [href]="d.drugUrl" tooltip="View on NCI Thesaurus">
           {{ d.ncitId }}
         </cvc-link-tag>
+      </ng-template>
+      <ng-template #noNcitId>
+        <span nz-typography nzType="secondary">No NCIt ID</span>
       </ng-template>
 
       <nz-descriptions nzSize="small"
         [nzColumn]="2"
         nzBordered="true">
-
+        <nz-descriptions-item *ngIf="d.drugAliases.length > 0" nzTitle="Aliases" nzSpan="2">
+          {{ d.drugAliases.join(', ') }}
+        </nz-descriptions-item>
         <nz-descriptions-item nzTitle="Assertions"
           nzSpan="2">
           {{d.assertionCount}}
