--- a/client/src/app/forms/genes/types/gene-input/gene-input.type.html
+++ b/client/src/app/forms/genes/types/gene-input/gene-input.type.html
@@ -15,12 +15,12 @@
         [nzLabel]="opt.tooltip"
         [nzValue]="opt.gene">
         <nz-space>
-          <nz-space-item>
-            {{ opt.label }}
-          </nz-space-item>
-          <nz-space-item *ngIf="opt.gene.geneAliases.length > 0">
-            <span nz-typography nzType="secondary">{{ opt.gene.geneAliases.join(', ') }}</span>
-          </nz-space-item>
+          <span *nzSpaceItem>{{ opt.label }}</span>
+          <ng-container *ngIf="opt.gene.geneAliases.length > 0">
+            <span nz-typography nzType="secondary" *nzSpaceItem>
+              {{ opt.gene.geneAliases.join(', ') }}
+            </span>
+          </ng-container>
         </nz-space>
       </nz-option>
     </ng-container>
