--- a/client/src/app/views/genes/genes-detail/genes-detail.view.html
+++ b/client/src/app/views/genes/genes-detail/genes-detail.view.html
@@ -25,7 +25,7 @@
           *ngrxLet="viewer$ as viewer">
 
           <!-- add revision btn -->
-          <nz-space-item>
+          <span *nzSpaceItem>
             <button [routerLink]="['/genes', gene.id, 'revise']"
               *ngIf="viewer.signedIn"
               routerLinkActive
@@ -35,11 +35,11 @@
               nzSize="small">
               Revise
             </button>
-          </nz-space-item>
+          </span>
 
           <!-- add flag btn -->
           <!-- TODO implement as flag form within popover window -->
-          <nz-space-item>
+          <span *nzSpaceItem>
             <button routerLink="flags"
               *ngIf="viewer.signedIn"
               routerLinkActive
@@ -49,12 +49,12 @@
               nzSize="small">
               Flag
             </button>
-          </nz-space-item>
+          </span>
 
-          <nz-space-item>
+          <span *nzSpaceItem>
             <cvc-entity-subscription-button *ngIf="viewer.signedIn && subscribable" [viewer]="viewer" [subscribableId]="subscribable.id" typename="Gene">
             </cvc-entity-subscription-button>
-          </nz-space-item>
+          </span>
         </nz-space>
 
       </nz-page-header-extra>
