--- a/client/src/app/views/genes/genes-detail/genes-summary/genes-summary.page.html
+++ b/client/src/app/views/genes/genes-detail/genes-summary/genes-summary.page.html
@@ -89,10 +89,8 @@
 
     <!-- last revision submitted/accepted, mygeneinfo col -->
     <nz-col nzSpan="12">
-
-
       <!-- mygeneinfo -->
-      <cvc-my-gene-info [geneInfo]="myGeneInfo$ | ngrxPush" *nzSpaceItem></cvc-my-gene-info>
+      <cvc-my-gene-info [geneInfo]="myGeneInfo$ | ngrxPush"></cvc-my-gene-info>
 
     </nz-col>
   </nz-row>
