--- a/client/src/app/components/genes/gene-tag/gene-tag.component.html
+++ b/client/src/app/components/genes/gene-tag/gene-tag.component.html
@@ -7,9 +7,11 @@
 <ng-template #tag>
   <nz-tag *ngIf="enablePopover; else noPopover"
     nz-popover
-    [nzPopoverMouseEnterDelay]="0.5"
+    [nzPopoverMouseEnterDelay]="this.onCloseClicked ? 0 : 0.5"
     [nzPopoverContent]="genePopover"
-    nzPopoverTrigger="hover">
+    nzPopoverTrigger="hover"
+    [nzMode]="this.onCloseClicked ? 'closeable' : 'default'" (nzOnClose)="itemClosed($event)"
+    >
     <ng-template [ngTemplateOutlet]="tagContent"></ng-template>
   </nz-tag>
   <ng-template #genePopover>
@@ -18,7 +20,7 @@
 </ng-template>
 
 <ng-template #noPopover>
-  <nz-tag>
+    <nz-tag [nzMode]="this.onCloseClicked ? 'closeable' : 'default'" (nzOnClose)="itemClosed($event)">
     <ng-template [ngTemplateOutlet]="tagContent"></ng-template>
   </nz-tag>
 </ng-template>
