--- a/client/src/app/forms/config/types/ensembl-input/ensembl-input.type.html
+++ b/client/src/app/forms/config/types/ensembl-input/ensembl-input.type.html
@@ -1,2 +1,3 @@
-<nz-input-number [formControl]="formControl"
-  [formlyAttributes]="field"></nz-input-number>
+<nz-input-number [formlyAttributes]="field"
+  [formControl]="formControl">
+</nz-input-number>
