--- a/client/src/app/forms/config/types/gene-select/gene-select.type.html
+++ b/client/src/app/forms/config/types/gene-select/gene-select.type.html
@@ -5,6 +5,7 @@
   [nzPlaceHolder]="!to.placeholder ? null : to.placeholder"
   [nzNotFoundContent]="sourceLoader"
   [nzShowArrow]="to.showArrow"
+  (ngModelChange)="onChange"
   (nzOnSearch)="to.onSearch($event)">
   <ng-container *ngrxLet="this.genes$ as genes">
     <nz-option *ngFor="let opt of genes"
