--- a/client/src/app/forms/config/types/gene-select/gene-select.type.html
+++ b/client/src/app/forms/config/types/gene-select/gene-select.type.html
@@ -4,7 +4,7 @@
   [formlyAttributes]="field"
   [nzPlaceHolder]="!to.placeholder ? null : to.placeholder"
   [nzNotFoundContent]="sourceLoader"
-  [nzShowArrow]="to.showArrow"
+  [nzShowArrow]="false"
   (nzOnSearch)="to.onSearch($event)">
   <ng-container *ngrxLet="this.genes$ as genes">
     <nz-option *ngFor="let opt of genes"
