--- a/client/src/app/forms/config/types/gene-select/gene-select.type.html
+++ b/client/src/app/forms/config/types/gene-select/gene-select.type.html
@@ -3,7 +3,7 @@
   [formControl]="formControl"
   [formlyAttributes]="field"
   [nzPlaceHolder]="!to.placeholder ? null : to.placeholder"
-  [nzNotFoundContent]="sourceLoader"
+  [nzNotFoundContent]="notFound"
   [nzShowArrow]="false"
   (nzOnSearch)="to.onSearch($event)">
   <ng-container *ngrxLet="this.genes$ as genes">
@@ -24,6 +24,17 @@
     </nz-option>
   </ng-container>
 </nz-select>
-<ng-template #sourceLoader>
-  No gene found in CIViC that matches the string provided.
+<ng-template #notFound>
+    <!-- prompt user to enter search string if none entered, or it is of insufficient length -->
+  <ng-container [ngSwitch]="to.searchLength >= 0 && to.searchLength >= to.minSearchlength">
+    <div *ngSwitchCase="false"
+      class="ant-form-item-explain">
+      Enter an ENTREZ gene ID to search CIViC Genes.
+    </div>
+    <!-- if valid search, but no results returned, show notice -->
+    <div *ngSwitchCase="true" class="ant-form-item-explain">
+      No gene found in CIViC that matches the string provided.
+    </div>
+  </ng-container>
+
 </ng-template>
