drug-tag now shows close btn

--- a/client/src/app/components/drugs/cvc-drug-tag/cvc-drug-tag.component.html
+++ b/client/src/app/components/drugs/cvc-drug-tag/cvc-drug-tag.component.html
@@ -11,8 +11,7 @@
     [nzPopoverContent]="drugPopover"
     nzPopoverPlacement="right"
     nzPopoverTrigger="hover"
-
-    >
+    [nzMode]="this.onCloseClicked ? 'closeable' : 'default'" (nzOnClose)="itemClosed($event)">
     <ng-template [ngTemplateOutlet]="tagContent"></ng-template>
   </nz-tag>
 
