--- a/client/src/app/forms/config/types/gene-input/gene-input.type.html
+++ b/client/src/app/forms/config/types/gene-input/gene-input.type.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="!formControl.value?.id; else geneListItem">
-  <nz-select nzShowSearch
+  <nz-select #focusInput nzShowSearch
     nzServerSearch
     [formControl]="formControl"
     [formlyAttributes]="field"
