--- a/client/src/app/forms/config/types/gene-input/gene-input.type.html
+++ b/client/src/app/forms/config/types/gene-input/gene-input.type.html
@@ -1,28 +1,23 @@
 <ng-container *ngIf="!formControl.value?.id; else geneListItem">
-  <nz-select #focusInput nzShowSearch
+  <nz-select #focusInput
+    nzShowSearch
     nzServerSearch
     [formControl]="formControl"
     [formlyAttributes]="field"
     [nzPlaceHolder]="!to.placeholder ? null : to.placeholder"
     [nzNotFoundContent]="sourceLoader"
-    [nzShowArrow]="to.showArrow"
-    [nzFilterOption]="to.filterOption"
-    (nzOnSearch)="to.onSearch($event)">
-    <ng-container *ngrxLet="this.genes$ as genes">
-      {{genes | json}}
-      <nz-option *ngFor="let opt of genes"
-        nzCustomContent
-        [nzLabel]="opt.tooltip"
-        [nzValue]="opt.gene">
-        <nz-space>
-          <span *nzSpaceItem [innerHtml]="opt.label | highlightTypeahead: this.to.searchString"></span>
-          <ng-container *ngIf="opt.gene.geneAliases.length > 0">
-            <span nz-typography nzType="secondary" *nzSpaceItem [innerHtml]="opt.gene.geneAliases.join(', ') | highlightTypeahead: this.to.searchString">
-            </span>
-          </ng-container>
-        </nz-space>
-      </nz-option>
-    </ng-container>
+    (nzOnSearch)="onSearch$.next($event)">
+    <nz-option *ngFor="let opt of geneOpts$ | async"
+      nzCustomContent
+      [nzLabel]="opt.tooltip"
+      [nzValue]="opt.gene">
+      <span [innerHtml]="opt.label | highlightTypeahead: this.to.searchString"></span>
+      <ng-container *ngIf="opt.gene.geneAliases.length > 0">
+        <span nz-typography nzType="secondary"> - Aliases:
+          <span [innerHtml]="opt.gene.geneAliases.join(', ') | highlightTypeahead: this.to.searchString"></span>
+        </span>
+      </ng-container>
+    </nz-option>
   </nz-select>
   <ng-template #sourceLoader>
     No gene found in CIViC that matches the string provided.
