use more abstract names

--- a/client/src/app/forms/config/types/gene-input/gene-input.type.html
+++ b/client/src/app/forms/config/types/gene-input/gene-input.type.html
@@ -7,7 +7,7 @@
     [nzPlaceHolder]="!to.placeholder ? null : to.placeholder"
     [nzNotFoundContent]="sourceLoader"
     (nzOnSearch)="onSearch$.next($event)">
-    <nz-option *ngFor="let opt of geneOpts$ | async"
+    <nz-option *ngFor="let opt of options$ | async"
       nzCustomContent
       [nzLabel]="opt.tooltip"
       [nzValue]="opt.gene">
