--- a/client/src/app/forms/config/types/drug-input/drug-input.type.html
+++ b/client/src/app/forms/config/types/drug-input/drug-input.type.html
@@ -43,7 +43,7 @@
     <ng-container *ngIf="this.to.searchString !== '' && this.to.searchString.length >= 5">
         <cvc-form-errors-alert *ngIf="this.errorMessages.length > 0" [errors]="errorMessages"> </cvc-form-errors-alert>
         <button *ngIf="this.errorMessages.length == 0" nz-button nzSize="small" [nzLoading]="this.loading" (click)="addDrug(to.searchString)">
-          <i nz-icon nzType="plus" nzTheme="outline"></i>No Existing CIViC Drug&nbsp;<strong>{{ to.searchString }}</strong>&nbsp;found. Create A New Disease?
+          <i nz-icon nzType="plus" nzTheme="outline"></i>No Existing CIViC Drug&nbsp;<strong>{{ to.searchString }}</strong>&nbsp;found. Create A New Drug?
         </button>
     </ng-container>
   </ng-container>
