--- a/client/src/app/components/genes/genes-table/genes-table.component.html
+++ b/client/src/app/components/genes/genes-table/genes-table.component.html
@@ -138,12 +138,17 @@
         <td nzRight>{{gene.evidenceItemCount}}</td>
         <td nzRight>{{gene.assertionCount}}</td>
       </tr>
-      <tr *ngrxLet="pageInfo$ as pageInfo">
-        <button *ngIf="pageInfo.hasNextPage"
-          nz-button
-          nzBlock
-          (click)="loadMore(pageInfo.endCursor)">Load More</button>
-      </tr>
+      <!-- Load More button row -->
+      <ng-container *ngrxLet="pageInfo$ as pageInfo">
+        <tr *ngIf="pageInfo.hasNextPage">
+          <td colspan="7">
+            <button *ngIf="pageInfo.hasNextPage"
+              (click)="loadMore(pageInfo.endCursor)"
+              nz-button
+              nzBlock>Load More</button>
+          </td>
+        </tr>
+      </ng-container>
     </tbody>
   </nz-table>
 </ng-container>
