dont show a link if there isnt one available, fix reactome link for new site. closes #350

--- a/client/src/app/components/genes/my-gene-info/my-gene-info.component.html
+++ b/client/src/app/components/genes/my-gene-info/my-gene-info.component.html
@@ -140,10 +140,13 @@
                   {{ pathway.name }}
                 </td>
                 <td class="button-col">
-                  <a nz-button href="{{ pathway?.link }}" target="_blank"
+                  <a *ngIf="pathway?.link; else noPathwayLink" nz-button href="{{ pathway?.link }}" target="_blank"
                     nzType="default" nzSize="small">
                     {{ pathway.src}}
                   </a>
+                  <ng-template #noPathwayLink>
+                    {{ pathway.src}}
+                  </ng-template>
                 </td>
               </tr>
             </ng-template>
