Add counts to drug browse table

--- a/client/src/app/views/drugs/drugs-home/drugs-home.page.html
+++ b/client/src/app/views/drugs/drugs-home/drugs-home.page.html
@@ -10,7 +10,7 @@
       <div nz-col
         [nzSpan]="24">
         <div class="content">
-          <cvc-drugs-table></cvc-drugs-table>
+          <cvc-drugs-table cvcTitle="Browse Drugs"></cvc-drugs-table>
         </div>
       </div>
     </div>
