--- a/client/src/app/components/drugs/drugs-table/drugs-table.component.html
+++ b/client/src/app/components/drugs/drugs-table/drugs-table.component.html
@@ -1,84 +1,104 @@
-<nz-table #drugsTable
-  [nzData]="(drugs$ | ngrxPush)"
-  [nzLoading]="(isLoading$ | ngrxPush)"
-  [nzFrontPagination]="false"
-  [nzShowPagination]="false">
+<nz-card [nzTitle]="titleTemplate">
+  <nz-table #drugsTable
+    [nzData]="(drugs$ | ngrxPush)"
+    [nzLoading]="(isLoading$ | ngrxPush)"
+    [nzFrontPagination]="false"
+    [nzShowPagination]="false">
 
-  <thead (nzSortOrderChange)="onSortChanged($event)">
-    <tr>
-      <th nzWidth="40%"
-        [nzColumnKey]="sortColumns.Name"
-        [nzSortFn]="true">
-        Name
-      </th>
-      <th nzWidth="40%"
-        [nzColumnKey]="sortColumns.NcitId"
-        [nzSortFn]="true">
-        NCIt ID
-      </th>
-      <th nzWidth="10%"
-        nzRight
-        [nzColumnKey]="sortColumns.EvidenceItemCount"
-        [nzSortFn]="true"><i nz-icon
-          nzType="civic:evidence"
-          nz-tooltip
-          nzTooltipTitle="Evidence count"></i></th>
-      <th nzWidth="10%"
-        nzRight
-        [nzColumnKey]="sortColumns.AssertionCount"
-        [nzSortFn]="true"><i nz-icon
-          nzType="civic:assertion"
-          nz-tooltip
-          nzTooltipTitle="Assertion count"></i></th>
-    </tr>
-    <tr>
-      <th>
-        <cvc-clearable-input-filter [(inputModel)]="nameFilter"
-          placeholderText="Search Name"
-          [onInputChanged]="textInputCallback"></cvc-clearable-input-filter>
-      </th>
-      <th>
-        <cvc-clearable-input-filter [(inputModel)]="ncitIdFilter"
-          placeholderText="Search NCIt ID"
-          [onInputChanged]="textInputCallback"></cvc-clearable-input-filter>
-      </th>
-      <th>
-      </th>
-      <th>
-      </th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let d of drugsTable.data">
-      <td>
-        <cvc-drug-tag [drug]="d"></cvc-drug-tag>
-      </td>
-      <td>
-        <cvc-link-tag *ngIf="d.ncitId; else noNcit"
-          [href]="d.drugUrl"
-          tooltip="View in the NCIthesaurus">
-          {{ d.ncitId }}
-        </cvc-link-tag>
+    <thead (nzSortOrderChange)="onSortChanged($event)">
+      <tr>
+        <th nzWidth="40%"
+          [nzColumnKey]="sortColumns.Name"
+          [nzSortFn]="true">
+          Name
+        </th>
+        <th nzWidth="40%"
+          [nzColumnKey]="sortColumns.NcitId"
+          [nzSortFn]="true">
+          NCIt ID
+        </th>
+        <th nzWidth="10%"
+          nzRight
+          [nzColumnKey]="sortColumns.EvidenceItemCount"
+          [nzSortFn]="true"><i nz-icon
+            nzType="civic:evidence"
+            nz-tooltip
+            nzTooltipTitle="Evidence count"></i></th>
+        <th nzWidth="10%"
+          nzRight
+          [nzColumnKey]="sortColumns.AssertionCount"
+          [nzSortFn]="true"><i nz-icon
+            nzType="civic:assertion"
+            nz-tooltip
+            nzTooltipTitle="Assertion count"></i></th>
+      </tr>
+      <tr>
+        <th>
+          <cvc-clearable-input-filter [(inputModel)]="nameFilter"
+            placeholderText="Search Name"
+            [onInputChanged]="textInputCallback"></cvc-clearable-input-filter>
+        </th>
+        <th>
+          <cvc-clearable-input-filter [(inputModel)]="ncitIdFilter"
+            placeholderText="Search NCIt ID"
+            [onInputChanged]="textInputCallback"></cvc-clearable-input-filter>
+        </th>
+        <th>
+        </th>
+        <th>
+        </th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let d of drugsTable.data">
+        <td>
+          <cvc-drug-tag [drug]="d"></cvc-drug-tag>
+        </td>
+        <td>
+          <cvc-link-tag *ngIf="d.ncitId; else noNcit"
+            [href]="d.drugUrl"
+            tooltip="View in the NCIthesaurus">
+            {{ d.ncitId }}
+          </cvc-link-tag>
 
-        <ng-template #noNcit>--</ng-template>
-      </td>
-      <td>
-        {{ d.evidenceCount }}
-      </td>
-      <td>
-        {{ d.assertionCount }}
-      </td>
-    </tr>
-    <!-- Load More button row -->
-    <ng-container *ngrxLet="pageInfo$ as pageInfo">
-      <tr *ngIf="pageInfo.hasNextPage">
-        <td colspan="7">
-          <button *ngIf="pageInfo.hasNextPage"
-            (click)="loadMore(pageInfo.endCursor)"
-            nz-button
-            nzBlock>Load More</button>
+          <ng-template #noNcit>--</ng-template>
+        </td>
+        <td>
+          {{ d.evidenceCount }}
+        </td>
+        <td>
+          {{ d.assertionCount }}
         </td>
       </tr>
-    </ng-container>
-  </tbody>
-</nz-table>
+      <!-- Load More button row -->
+      <ng-container *ngrxLet="pageInfo$ as pageInfo">
+        <tr *ngIf="pageInfo.hasNextPage">
+          <td colspan="7">
+            <button *ngIf="pageInfo.hasNextPage"
+              (click)="loadMore(pageInfo.endCursor)"
+              nz-button
+              nzBlock>Load More</button>
+          </td>
+        </tr>
+      </ng-container>
+    </tbody>
+  </nz-table>
+</nz-card>
+
+<ng-template #titleTemplate>
+  <i nz-icon nzType="civic:intervention"></i>
+  <ng-container *ngIf="this.cvcTitleTemplate">
+    <ng-template [ngTemplateOutlet]="cvcTitleTemplate"></ng-template>
+  </ng-container>
+  <ng-container *ngIf="this.cvcTitle">
+    {{ this.cvcTitle }}
+  </ng-container>
+  <span *ngIf="(filteredCount$ | ngrxPush) as filteredCount; else noData" nz-typography nzType="secondary">
+    ({{totalCount}} total, showing {{visibleCount}} of {{filteredCount}} filtered)
+  </span>
+  <ng-template #noData>
+    <span nz-typography nzType="secondary">
+      (0 total)
+    </span>
+  </ng-template>
+</ng-template>
