Fix missing Load X More count

--- a/client/src/app/components/drugs/drugs-table/drugs-table.component.html
+++ b/client/src/app/components/drugs/drugs-table/drugs-table.component.html
@@ -77,7 +77,7 @@
             <button *ngIf="pageInfo.hasNextPage"
               (click)="loadMore(pageInfo.endCursor)"
               nz-button
-              nzBlock>Load More</button>
+              nzBlock>Load {{this.initialPageSize}} More</button>
           </td>
         </tr>
       </ng-container>
