--- a/client/src/app/components/genes/genes-table/genes-table.component.html
+++ b/client/src/app/components/genes/genes-table/genes-table.component.html
@@ -146,7 +146,7 @@
               <button *ngIf="pageInfo.hasNextPage"
                 (click)="loadMore(pageInfo.endCursor)"
                 nz-button
-                nzBlock>Load More</button>
+                nzBlock>Load {{this.fetchMorePageSize}} More</button>
             </td>
           </tr>
         </ng-container>
