--- a/client/src/app/components/drugs/drugs-table/drugs-table.component.html
+++ b/client/src/app/components/drugs/drugs-table/drugs-table.component.html
@@ -20,17 +20,19 @@
         <th nzWidth="10%"
           nzRight
           [nzColumnKey]="sortColumns.EvidenceItemCount"
-          [nzSortFn]="true"><i nz-icon
-            nzType="civic:evidence"
-            nz-tooltip
-            nzTooltipTitle="Evidence count"></i></th>
+          [nzSortFn]="true"
+          nz-tooltip
+          nzTooltipTitle="Evidence Count">
+          <i nz-icon nzType="civic:evidence"></i>
+        </th>
         <th nzWidth="10%"
           nzRight
           [nzColumnKey]="sortColumns.AssertionCount"
-          [nzSortFn]="true"><i nz-icon
-            nzType="civic:assertion"
-            nz-tooltip
-            nzTooltipTitle="Assertion count"></i></th>
+          [nzSortFn]="true"
+          nz-tooltip
+          nzTooltipTitle="Assertion Count">
+          <i nz-icon nzType="civic:assertion"></i>
+        </th>
       </tr>
       <tr>
         <th>
