--- a/client/src/app/components/genes/genes-table/genes-table.component.html
+++ b/client/src/app/components/genes/genes-table/genes-table.component.html
@@ -24,24 +24,27 @@
           <th nzWidth="3%"
             nzRight
             [nzColumnKey]="sortColumns.VariantCount"
-            [nzSortFn]="true"><i nz-icon
-              nzType="civic:variant"
-              nz-tooltip
-              nzTooltipTitle="Variant count"></i></th>
+            [nzSortFn]="true"
+            nz-tooltip
+            nzTooltipTitle="Variant Count">
+            <i nz-icon nzType="civic:variant"></i>
+          </th>
           <th nzWidth="3%"
             nzRight
             [nzColumnKey]="sortColumns.EvidenceItemCount"
-            [nzSortFn]="true"><i nz-icon
-              nzType="civic:evidence"
-              nz-tooltip
-              nzTooltipTitle="Evidence count"></i></th>
+            [nzSortFn]="true"
+            nz-tooltip
+            nzTooltipTitle="Evidence Count">
+            <i nz-icon nzType="civic:evidence"></i>
+          </th>
           <th nzWidth="3%"
             nzRight
             [nzColumnKey]="sortColumns.AssertionCount"
-            [nzSortFn]="true"><i nz-icon
-              nzType="civic:assertion"
-              nz-tooltip
-              nzTooltipTitle="Assertion count"></i></th>
+            [nzSortFn]="true"
+            nz-tooltip
+            nzTooltipTitle="Assertion Count">
+            <i nz-icon nzType="civic:assertion"></i>
+          </th>
         </tr>
         <tr>
           <th>
