updated gene table, home page

--- a/client/src/app/components/genes/genes-table/genes-table.component.html
+++ b/client/src/app/components/genes/genes-table/genes-table.component.html
@@ -1,6 +1,7 @@
 <nz-card [nzTitle]="titleTemplate">
   <ng-container *ngIf="{ value: data$ | ngrxPush } as data">
     <nz-table #genesTable
+      nzSize="small"
       [nzData]="(genes$ | ngrxPush)"
       [nzLoading]="(isLoading$ | ngrxPush)"
       [nzFrontPagination]="false"
