--- a/client/src/app/views/genes/genes-home/genes-home.page.html
+++ b/client/src/app/views/genes/genes-home/genes-home.page.html
@@ -3,6 +3,7 @@
 
   <!--content-->
   <nz-page-header-content>
+    <!-- title, description, docs links -->
     <nz-row class="header-content">
       <nz-col nzFlex="64px"
         class="header-icon">
