updated data-releases page, table

--- a/client/src/app/views/genes/genes-home/genes-home.page.html
+++ b/client/src/app/views/genes/genes-home/genes-home.page.html
@@ -16,7 +16,7 @@
         <p nz-typography
           nzEllipsis
           nzExpandable
-          [nzEllipsisRows]="2">CIViC Genes include a gene-level summary, a link to the Druge Gene Interation Database, and extensive gene details from MyGene.info.</p>
+          [nzEllipsisRows]="2">CIViC Genes include a gene-level summary, a link to the Drug Gene Interation Database, and extensive gene details from MyGene.info.</p>
       </nz-col>
       <nz-col nzFlex="auto"
         class="header-links">
