--- a/client/src/app/forms/gene-revise/gene-revise.form.html
+++ b/client/src/app/forms/gene-revise/gene-revise.form.html
@@ -1,45 +1,38 @@
-<form nz-form
-  [formGroup]="formGroup"
-  (ngSubmit)="submitRevision(formModel)"
-  nzLayout="vertical">
-  <ng-container *ngIf="(submitError$ | async) as errors">
-    <nz-form-item *ngIf="errors.length > 0">
-      <cvc-form-errors-alert [errors]="errors">
+<nz-spin nzTip="Submitting" [nzSpinning]="this.loading">
+  <form nz-form
+    [formGroup]="formGroup"
+    (ngSubmit)="submitRevision(formModel)"
+    nzLayout="vertical">
+
+    <ng-container *ngTemplateOutlet="formMessages"></ng-container>
+
+    <formly-form *ngIf="!this.success" [form]="formGroup"
+      [fields]="formFields"
+      [model]="formModel"
+      [options]="formOptions"
+      (modelChange)="formModel = $event">
+    </formly-form>
+  </form>
+</nz-spin>
+
+<ng-template #formMessages>
+  <ng-container *ngIf="this.errorMessages.length > 0">
+    <nz-form-item>
+      <cvc-form-errors-alert [errors]="this.errorMessages">
       </cvc-form-errors-alert>
     </nz-form-item>
   </ng-container>
-  <ng-container *ngIf="submitSuccess$ | async">
+  <ng-container *ngIf="this.success">
     <nz-alert nzType="success"
       nzMessage="Suggested Revision Submitted"
       [nzDescription]="successMessage"
       nzShowIcon></nz-alert>
     <ng-template #successMessage
       nzSize="small">
-      <p>View it on the <a routerLink="../../revisions">Revisions Page</a> or suggest another revision below.</p>
+      <p>View it on the <a routerLink="../../revisions">Revisions Page</a>.</p>
     </ng-template>
   </ng-container>
-  <formly-form [form]="formGroup"
-    [fields]="formFields"
-    [model]="formModel"
-    [options]="formOptions"
-    (modelChange)="formModel = $event"></formly-form>
-  <nz-form-item *ngIf="!(submitSuccess$ | async)">
-    <nz-form-control>
-      <cvc-form-buttons>
-        <cvc-org-selector-btn-group [(selectedOrg)]="this.mostRecentOrg">
-          <button type="submit"
-            nz-button
-            cvcOrgSelectorBtn
-            nzType="primary"
-            nzSize="small"
-            [disabled]="!formGroup.valid">
-            Suggest Revision
-          </button>
-        </cvc-org-selector-btn-group>
-      </cvc-form-buttons>
-    </nz-form-control>
-  </nz-form-item>
-</form>
+</ng-template>
 <!-- <div nz-row>
      <div nz-col nzSpan="12">
      <ngx-json-viewer *ngIf="formGroup"
