Some evidence submit/revise form bugfixes

--- a/client/src/app/forms/evidence-revise/evidence-revise.form.html
+++ b/client/src/app/forms/evidence-revise/evidence-revise.form.html
@@ -1,5 +1,6 @@
 <nz-spin nzTip="Submitting" [nzSpinning]="this.loading">
   <form nz-form
+    *ngIf="formModel"
     [formGroup]="formGroup"
     (ngSubmit)="submitRevision(formModel)"
     nzLayout="vertical">
