--- a/client/src/app/components/genes/genes-table/genes-table.component.html
+++ b/client/src/app/components/genes/genes-table/genes-table.component.html
@@ -26,6 +26,7 @@
             nzRight
             [nzColumnKey]="sortColumns.VariantCount"
             [nzSortFn]="true"
+            [nzSortDirections]="['descend', 'ascend', null]"
             nz-tooltip
             nzTooltipTitle="Variant Count">
             <i nz-icon nzType="civic:variant"></i>
@@ -34,6 +35,7 @@
             nzRight
             [nzColumnKey]="sortColumns.EvidenceItemCount"
             [nzSortFn]="true"
+            [nzSortDirections]="['descend', 'ascend', null]"
             nz-tooltip
             nzTooltipTitle="Evidence Count">
             <i nz-icon nzType="civic:evidence"></i>
@@ -42,6 +44,7 @@
             nzRight
             [nzColumnKey]="sortColumns.AssertionCount"
             [nzSortFn]="true"
+            [nzSortDirections]="['descend', 'ascend', null]"
             nz-tooltip
             nzTooltipTitle="Assertion Count">
             <i nz-icon nzType="civic:assertion"></i>
