--- a/client/src/app/components/genes/genes-table/genes-table.component.html
+++ b/client/src/app/components/genes/genes-table/genes-table.component.html
@@ -104,7 +104,7 @@
               [matchingText]="aliasInput"></cvc-plain-tag-overflow>
           </td>
           <td>
-            <cvc-tag-overflow tagType='disease'
+            <cvc-tag-overflow tagType="disease"
               [maxDisplayCount]="1"
               [tags]="gene.diseases"
               [matchingText]="diseaseInput"> </cvc-tag-overflow>
