--- a/client/src/app/views/drugs/drugs-detail/drugs-summary/drugs-summary.component.html
+++ b/client/src/app/views/drugs/drugs-detail/drugs-summary/drugs-summary.component.html
@@ -1,10 +1,48 @@
-<nz-space nzSize="middle"
-  *ngIf="drugId"
-  nzDirection="vertical"
-  class="space-align-block">
-  <!-- assertions table card -->
-  <cvc-assertions-table *nzSpaceItem [drugId]="drugId" cvcTitle="Drug Assertions"></cvc-assertions-table>
+<div class="summary-container">
+  <ng-container *ngIf="drug$ | ngrxPush as drug">
+    <!-- grid with 8px horizontal gutter, 16px vertical gutter -->
+    <nz-row [nzGutter]="[8, 16]">
 
-  <!-- evidence table card -->
-  <cvc-evidence-table [drugId]="drugId" cvcTitle="Drug Evidence" *nzSpaceItem></cvc-evidence-table>
-</nz-space>
+      <!-- summary details -->
+      <nz-col [nzSpan]="24">
+        <nz-descriptions nzSize="small"
+          [nzColumn]="1"
+          nzBordered="true">
+          <nz-descriptions-item *ngIf="drug.drugAliases.length > 0"
+            nzTitle="Aliases"
+            nzSpan="2">
+            <cvc-tag-list>
+              <nz-tag nz-tooltip
+                [nzTooltipTitle]="alias"
+                *ngFor="let alias of drug.drugAliases">
+                {{ alias | truncate }}
+              </nz-tag>
+            </cvc-tag-list>
+          </nz-descriptions-item>
+        </nz-descriptions>
+      </nz-col>
+
+      <!-- evidence table -->
+      <nz-col [nzSpan]="24">
+        <cvc-evidence-table [drugId]="drug.id" cvcHeight="250px"
+          cvcTitle="Evidence associated with {{ drug.name }}"></cvc-evidence-table>
+      </nz-col>
+
+      <!-- assertions table -->
+      <!-- <nz-col [nzSpan]="24">
+           <cvc-assertions-table [drugId]="drug.id"
+           cvcTitle="Assertions associated with {{ drug.name  }}"></cvc-assertions-table>
+           </nz-col> -->
+
+    </nz-row>
+
+    <!-- assertions table card -->
+    <!-- <nz-row >
+         <nz-col [nzSpan]="24">
+         <cvc-assertions-table [drugId]="drug.id"
+         cvcTitle="Drug Assertions"></cvc-assertions-table>
+         </nz-col>
+         </nz-row> -->
+
+  </ng-container>
+</div>
